# cgt_distributed

./: .gitignore
cgt/: compilation.py  core.py  nn.py  tags
cgt/nn_ops/: im2col.py  max_pool_2d.py
examples/: char.py  demo_char_rnn.py  demo_mnist.py  log  out  red1.py  rnn_full_eg.py
examples/alice/: preproc.npz
examples/omptest/: omp.py
executor/: CMakeLists.txt  Makefile  a.out  all.cpp  all.py  allompfast.cpp  dist.sh  distX  egreader.cpp  egreader.h  main.cpp  noinp.cpp  out  trainingJob.cpp  trainingJob.h
executor/distX.xcodeproj/: project.pbxproj
executor/distX.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
executor/distX.xcodeproj/project.xcworkspace/xcshareddata/: distX.xccheckout
executor/distX.xcodeproj/project.xcworkspace/xcuserdata/rraja.xcuserdatad/: UserInterfaceState.xcuserstate  WorkspaceSettings.xcsettings
executor/distX.xcodeproj/xcuserdata/rraja.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
executor/distX.xcodeproj/xcuserdata/rraja.xcuserdatad/xcschemes/: distX.xcscheme  xcschememanagement.plist
include/: cgt_common.h  dummyinter.h  execution.h  helpers.h
include/egreader/: IRC.h  cgt_common.h  execution.cpp  execution.h  test_interpret.cpp
src/: cgt_common.cpp  cycgt.pyx  execution.cpp  tags
